# OpenCL-Histogram

./: CMakeLists.txt  README  analyze.cl  bmp.cpp  bmp.h  histogram_writer.cpp  histogram_writer.h  main.cpp  opencl_debug.cpp  opencl_debug.h
